2017-05-24  Hani Benhabiles  <hani.benhabiles@greenbone.net>

	* nasl/exec.c (exec_nasl_script): Handle openvas-nasl case.

2017-05-24  Hani Benhabiles  <hani.benhabiles@greenbone.net>

	* nasl/exec.c (exec_nasl_script): Use nvticache kb for nasl context, to
	use signature checks from load-up phase.

2017-05-23  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* tools/greenbone-nvt-sync.in: Renamed openvasmd to gvmd
	especially the PID filename.

	* doc/greenbone-nvt-sync.8: Renamed openvasmd to gvmd.

2017-05-23  Juan Jose Nicola  <juan.nicola@greenbone.net>

	* src/openvassd.c (main): Ignore SIGHUP until the scanner is ready.

2017-05-23  Hani Benhabiles  <hani.benhabiles@greenbone.net>

	* src/nasl_plugins.c (nasl_plugin_add): Set args kb to nvticache kb to
	be used for storing nvts signature checks.

2017-05-19  Hani Benhabiles  <hani.benhabiles@greenbone.net>

	* nasl/nasl_crypto.c (nasl_nt_owf_gen): Fix memory leak. Improve code
	style. Fix calculation for inputs of more than 64 characters.

2017-05-17  Juan Jose Nicola  <juan.nicola@greenbone.net>

	* nasl/nasl_crypto.c (nasl_nt_owf_gen): Replace code to convert
	ascii to unicode with g_utf8_to_utf16 to support special characters.

2017-05-16  Hani Benhabiles  <hani.benhabiles@greenbone.net>

	* misc/network.c (open_stream_connection): Add RC4 to the default
	priority strings as it is disabled in newer versions.
	(set_gnutls_protocol): Remove outdated comment.

2017-05-16  Hani Benhabiles  <hani.benhabiles@greenbone.net>

	* nasl/nasl_builtin_find_service.c (plugin_do_run): Change default
	number of parallel connections to 6 to match the default one in
	find_service.nasl.

2017-05-15  Michael Wiegand <michael.wiegand@greenbone.net>

	* src/sighand.c (print_trace): Fix typo in log message.

2017-05-15  Hani Benhabiles  <hani.benhabiles@greenbone.net>

	* nasl/nasl_builtin_find_service.c (plugin_do_run): Increase rw_timeout
	and wrap_timeout to match cnx_timeout.
